- FAQ updates (John Gellene)
- The "Open in New View" command has been re-added to the file system
  browser right-click menu
- Pressing ENTER in the file system browser no longer closes the
  selected file if 'double click close' is enabled; now, only double-
  and middle-clicks can close open files
- NEWS.txt written
- Updated Pascal syntax highlighting (Barry Carr)

+ Bug Fixes

- Removed unnecessary menu bar hack on MacOS X
- Tab width would be wrong on some JVMs
- Tighter layout in the file system browser's parent directory list
- The Commands->Root Directory command in the file system browser opened
  the 'roots:' VFS even on systems where it is not used (ie, Unix)
- Tool bar buttons had incorrect tool tips
- In the total size tally, the plugin manager didn't add the sizes of
  plugins that would be implicitly installed due to dependencies
- Plugin manager displayed the wrong message when installing plugins
- 'Print' command threw a NullPointerException if 'print header' was
  disabled
- Selection wasn't cleared when switching buffers sometimes. This caused
  problems
- If the block caret was enabled, mouse clicks would position the caret
  in the wrong location
- Files would not be saved properly if two stage saving was disabled and
  backups were enabled
- Workaround for Graphics2D.setPaintMode() bug on Windows (John Gellene)
- Docked windows can no longer be made larger than the width or height
  of the view
- If the first narrowed line was not a fold start, newly inserted lines
  within the narrowed region would become invisible
- Making changes to the last line in the buffer that would result in the
  line being wrapped would result in incorrect repaints
- Double-click and triple-click drags would throw exceptions if the
  mouse was moved outside the text area
- Fixed several bugs when painting tokens with a background color
- File system browser would throw NullPointerExceptions when loading
  directories under some circumstances