@@ -242,6 +242,19 @@ public class EditPane extends JPanel implements EBComponent
 
 		if(horizontalOffset != null)
 			textArea.setHorizontalOffset(horizontalOffset.intValue());
+
+		/* Silly bug workaround #8694. If you look at the above code,
+		 * note that we restore the saved caret position first, then
+		 * scroll to the saved location. However, the caret changing
+		 * can itself result in scrolling to a different location than
+		 * what was saved; and since moveCaretPosition() calls
+		 * updateBracketHighlight(), the bracket highlight's out of
+		 * bounds calculation will rely on a different set of physical
+		 * first/last lines than what we will end up with eventually.
+		 * Instead of confusing the user with status messages that
+		 * appear at random when switching buffers, we simply hide the
+		 * message alltogether. */
+		view.getStatus().setMessage(null);
 	} //}}}
 
 	//{{{ handleMessage() method
@@ -530,7 +543,7 @@ public class EditPane extends JPanel implements EBComponent
 		{
 			if(_buffer == buffer)
 			{
-				textArea.getPainter().repaint();
+				textArea.propertiesChanged();
 
 				if(view.getEditPane() == this)
 					view.getStatus().updateBufferStatus();
@@ -553,6 +566,11 @@ public class EditPane extends JPanel implements EBComponent
 				if(view.getEditPane() == this)
 					view.getStatus().updateMiscStatus();
 			}
+		}
+		else if(msg.getWhat() == BufferUpdate.SAVED)
+		{
+			if(_buffer == buffer)
+				textArea.propertiesChanged();
 		}
 	} //}}}
 
